--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <span class="amp">&amp;</span> 
                                 RYAN
                             </span>
-                            <div class="date">OCOTBER 14, 2017</div>
+                            <div class="date">OCTOBER 14, 2017</div>
                         </div>
 
                 
