--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>S+R 10|14|17</title>
+        <title>S+R Wedding 10|14|17</title>
         <meta name="description" content="Welcome to the wedding website for Shelby and Ryan's Big Day!">
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
