Reception Text Updates

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                                 The Villa Del Sol <br />
                                 Fullerton | California <br /><br />
                                 Saturday, October 14, 2017 <br />
-                                5:00 PM in the Courtyard <br /><br />
+                                5:00 - 6:00 PM Cocktails, 2nd level Patio <br />
+                                6:00 - 11:30 PM Courtyard Reception<br /><br />
                                 <br />
                                 <a href="http://www.thevilladelsol.com/about.html"><img src="img/VillaDelSol.png" class="theinn" alt="The Villa Del Sol | Fullerton" /></a>
                             </p>
