--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 <a href="tel:17149906000">(714) 990-6000</a> <br />
 <!--                                $159 2 Queen Suite | $189 1 King Suite <br /> -->
                                  <br />
-                                To ensure room availbility, please book prioir to: September 21, 2017 <br /><br />
+                                To ensure room availbility, please book prior to: September 21, 2017 <br /><br />
                                 Please mention you are a guest of the: Spiering &amp; Simmelink Wedding Group <br />
                                  <br />
                                 <i>Hotel provides shuttle transportation with in a 5 mile radius.</i> <br />
