Hotel Reservations Online

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                                 The Villa Del Sol <br />
                                 Fullerton | California <br /><br />
                                 Saturday, October 14, 2017 <br />
-                                5:00 - 6:00 PM Cocktails, 2nd level Patio <br />
-                                6:00 - 11:30 PM Courtyard Reception<br /><br />
+                                5:00 - 6:00 PM Cocktails, 2nd level Terrace <br />
+                                6:00 - 11:30 PM Reception, Courtyard <br /><br />
                                 <br />
                                 <a href="http://www.thevilladelsol.com/about.html"><img src="img/VillaDelSol.png" class="theinn" alt="The Villa Del Sol | Fullerton" /></a>
                             </p>
@@ -160,12 +160,13 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Gavin Johnson <br />
                                 Matt Ward <br />
                                 Cris Waugh  <br />
-                                CJ Perry <br />
+                                
                                 </p>
                             </div>
                             <div class="column right">
 
                                 <p>
+                                CJ Perry <br />
                                 Zachery Spiering <br />
                                 Austin Spiering <br />
                                 </p>
@@ -190,7 +191,10 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 <!--                                $159 2 Queen Suite | $189 1 King Suite <br /> -->
                                  <br />
                                 To ensure room availbility, please book prior to: September 21, 2017 <br /><br />
-                                Please mention you are a guest of the: Spiering &amp; Simmelink Wedding Group <br />
+                                Call or book your reservation online. <br />
+                                Online reservations: <a href="http://embassysuites.hilton.com/en/es/groups/personalized/L/LAXBRES-XSS-20171012/index.jhtml" target="_blank">Click Here</a> <br /><br />
+                                Calling in reservation?<br />
+                                Please mention you are a guest of the: <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
                                 <i>Hotel provides shuttle transportation with in a 5 mile radius.</i> <br />
                                 Shuttle will be available from reception until 12:30pm. Shuttle to ceremony is available upon request. <br />
@@ -230,7 +234,8 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 
                         <div class="column full">
                         
-                            <p>We are honored and blessed to have you a part of our special day. We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime. The beautiful Tuscany, Italy has been a dream destination. We are excited to venture over to all the wondrous places abroad and hopefully making stops at the Vatican, Venice and more! <br />  However, if your prefer the traditional route, we are registered at Target and Williams-Sonoma.</p>  
+                            <p>We are honored and blessed to have you a part of our special day. We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime. The beautiful region of Tuscany, Italy has been a dream destination. We are excited to venture over to all the wondrous places abroad. We look forward to making stops at the Vatican, Pantheon and more! <br />  However, if your prefer the traditional route, we are registered at Target and Williams-Sonoma.</p>
+                            <p>*NOTE: Our Target site is viewable. However, both the Honeyfund and Williams-Sonoma registries will remain locked until we finalize details. Apologies for any inconvenience. Please continue to check back!</p>  
                             <br />
                             <a href="http://www.target.com/gift-registry/registry/kqwcVGKb-aTAB1MwyMktBg?ref=registryCopiedLink"><img src="img/target.png" style="width: 300px; height:70px" alt="Target" class="giftreg"></a>
                             <br />    
