--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                             <h2>SCHEDULE OF EVENTS</h2>
                             <p>
                                 Rehearsal Dinner <br />
+                                <i>By invitation only</i> <br />
                                 Date TBD<br /><br />
 <!--
                                 Golf <br />
