--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </p>
                             
                             <p>
-                                <i>- For addresses and directions, please reference the <a href="#v-map">Vicinty Map.</a> -</i>
+                                <i>- Addresses &amp; Directions: Reference the <a href="#v-map">Vicinty Map.</a> -</i>
                             </p>
 
                         </div><!--end column--> 
@@ -254,10 +254,10 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 
                         <div class="column full">
                         
-                            <p>We are excited for you to share in our special day!</p>
-                            <br />  
+<!--                             <p>Looking forward to partying together on our special day!</p>
+                            <br />   -->
                             <p class="center"><strong>
-                            Please RSVP By: <br />
+                            Kindly Respond By: <br />
                             September 23, 2017 <br />
                             </strong></p>
                             <br />
