--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 
                         <div class="column full">
                         
-                            <p>We are honored and blessed to have you a part of our special day. We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime. The beautiful region of Tuscany, Italy has been a dream destination. We are excited to venture over to all the wondrous places abroad. We look forward to making stops at the Vatican, Pantheon and more! <br />  However, if your prefer the traditional route, we are registered at Target and Williams-Sonoma.</p>
+                            <p>We are honored and blessed to have you a part of our special day. We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime. <br /> If your prefer the traditional route, we are registered at Target and Williams-Sonoma.</p>
                             <p>*NOTE: Our Target site is viewable. However, both the Honeyfund and Williams-Sonoma registries will remain locked until we finalize details. Apologies for any inconvenience. Please continue to check back!</p>  
                             <br />
                             <a href="http://www.target.com/gift-registry/registry/kqwcVGKb-aTAB1MwyMktBg?ref=registryCopiedLink" target="_blank"><img src="img/target.png" style="width: 300px; height:70px" alt="Target" class="giftreg"></a>
