Hiding Full detail content
Unhide at a later date.... When Invites go out

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                             <p>
                                 Saint Mary's Catholic Church <br />
                                 Fullerton | California <br /><br />
-                                Saturday, October 14, 2017 <br /> 12:00 PM<br />
+                                Saturday, October 14, 2017 <br />
+<!--                                 12:00 PM<br /> -->
                                 </p>
                                 
 <!--
@@ -96,8 +97,8 @@
                                 The Villa Del Sol <br />
                                 Fullerton | California <br /><br />
                                 Saturday, October 14, 2017 <br />
-                                5:00 - 6:00 PM Cocktails, 2nd level Terrace <br />
-                                6:00 - 11:30 PM Reception, Courtyard <br /><br />
+<!--                                 5:00 - 6:00 PM Cocktails, 2nd level Terrace <br />
+                                6:00 - 11:30 PM Reception, Courtyard <br /><br /> -->
                                 <br />
 <!--                                <a href="http://www.thevilladelsol.com/about.html"><img src="img/VillaDelSol.png" class="theinn" alt="The Villa Del Sol | Fullerton" /></a>-->
                             </p>
@@ -108,11 +109,11 @@
 
                         </div><!--end column--> 
                         <div class="column right">
-                            <h2>SCHEDULE OF EVENTS</h2>
+<!--                             <h2>SCHEDULE OF EVENTS</h2> -->
                             <p>
-                                Rehearsal Dinner <br />
+<!--                                 Rehearsal Dinner <br />
                                 <i>By invitation only</i> <br />
-                                Date TBD<br /><br />
+                                Date TBD<br /><br /> -->
 <!--
                                 Golf <br />
                                 Friday, September 6th at 9am<br /><br />
