--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Please mention you are a guest of the: <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
                                 <i>Hotel provides shuttle transportation with in a 5 mile radius.</i> <br />
-                                Shuttle will be available from reception until 12:30pm. Shuttle to ceremony is available upon request. <br />
+                                Shuttle will be available from reception until 12:30 AM. Shuttle to ceremony is available upon request. <br />
                                 <br /> <br />
                                 If you have any questions, feel free to
                                 <a href="mailto:sspiering6@gmail.com"><i>email</i></a> us. <br />
