--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>S+R Wedding 10|14|17</title>
+        <title>S&amp;R Wedding</title>
         <meta name="description" content="Welcome to the wedding website for Shelby and Ryan's Big Day!">
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
         <!-- For iPhone 4 with high-resolution Retina display: -->
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed-blue.png">
         <!-- For first-generation iPad: -->
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed-blue.png">
         <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed-blue.png">
         
         <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Yantramanav:100, 200" rel="stylesheet">
 
