--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                             <div class="column right">
                                 <p>
                                 Melissa Gallardo <br />
-                                Lindsay Simmelink <br />
+                                Lindsey Simmelink <br />
                                 </p>
                             </div>
 
@@ -201,11 +201,11 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Calling in reservation?<br />
                                 Please mention you are a guest of the: <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
-                                <i>Hotel provides shuttle transportation with in a 5 mile radius.</i> <br />
+                                <i>Hotel provides shuttle transportation (upon rquest) with in a 5 mile radius.</i> <br />
 <!--                                Shuttle will be available from reception until 12:30 AM. Shuttle to ceremony is available upon request. <br />-->
                                 <br /> <br />
-                                Any questions? Don't hesitate to
-                                <a href="mailto:sspiering6@gmail.com"><i>email</i></a> us. <br />
+                                Any questions? <br />
+                                <a href="mailto:sspiering6@gmail.com"><i>Email</i></a> us! <br />
                             </p>
                         </div><!--end column-->
 
@@ -253,7 +253,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                             
                             <br />
                             <br /> If your prefer the traditional route, we are registered at Target.</p>
-                            <p>NOTE: <i>All registries are now fully viewable.</i></p>
+                            <p>NOTE: <i>All registries are now fully viewable and up-to-date.</i></p>
 <!--                             <p>*NOTE: Our Target site is viewable. However, both the Honeyfund and Williams-Sonoma registries will remain locked until we finalize details. Apologies for any inconvenience. Please continue to check back!</p>   -->
                             <br />
                             <a href="https://www.honeyfund.com/wedding/SpieringSimmelinkShindig" target="_blank"><img src="img/honeyfund.png" style="width: 300px; height:90px" alt="HoneyFund" class="giftreg"></a> 
