--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 <p>
                                 Gavin Johnson <br />
                                 Matt Ward <br />
-                                Cris Waugh  <br />
+                                Chris Waugh  <br />
                                 
                                 </p>
                             </div>
