Hiding details until a later date

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="column left">
                             <h2>CEREMONY</h2>
                             <p>
-                                Saint Mary's Catholic Church <br />
+<!--                                 Saint Mary's Catholic Church <br /> -->
                                 Fullerton | California <br /><br />
                                 Saturday, October 14, 2017 <br />
 <!--                                 12:00 PM<br /> -->
@@ -101,7 +101,7 @@
                            
                            <h2>RECEPTION</h2>
                             <p>
-                                The Villa Del Sol, Courtyard <br />
+<!--                                 The Villa Del Sol, Courtyard <br /> -->
                                 Fullerton | California <br /><br />
                                 Saturday, October 14, 2017 <br />
 <!--                                 5:00 - 6:00 PM Cocktails, 2nd level Terrace <br />
@@ -276,7 +276,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                             <br />   -->
                             <p class="center"><strong>
                             Kindly Respond By: <br />
-                            September 15, 2017 <br />
+                            September 13, 2017 <br />
                             </strong></p>
                             <br />
                             <button type="button" class="center"><a href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank" class="center">RSVP Here!</a></button>
