--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                <br />
                                 <div class="clumn full">
                                 
-                                <p>Special rate information and links will be removed from site after deadline has past. Location and shuttle inforamtion will remain on site.
+                                <p>Special rate information and links will be removed from site after deadline has past. Location and shuttle information will remain on site.
                                 </p>
 <!--
                                 <p class="center">
