Correcting Room Price Info

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Brea, CA 92821 <br />
                                 <a href="tel:17149906000">(714) 990-6000</a> <br />
                                 <br />
-                                $159 - 2 Queen Suite
-                                <br /> $189 - 1 King Suite <br /> 
+                                $159 - 1 King Suite
+                                <br /> $189 - 2 Queen Suite <br /> 
                                  <br />
                                 To ensure room and availbility,<br /> please book prior to:<br /> <strong>September 21, 2017</strong> <br /><br />
                                 Call or book your reservation online. <br />
