Hotel Fullerton Link

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                  <br />
                                 To ensure room and availbility,<br /> please book prior to:<br /> <strong>September 15, 2017</strong> <br /><br />
                                 Call or book your reservation online. <br />
-                                Online reservations: <a href="" target="_blank">Click Here</a> <br /><br />
+                                Online reservations: <a href="https://bookings.ihotelier.com/The-Hotel-Fullerton-Anaheim/bookings.jsp?groupID=1797699&hotelID=77586" target="_blank">Click Here</a> <br /><br />
                                 Calling in reservation?<br />
                                 Request room rate mentioning: <br /> <i>Spiering &amp; Simmelink Wedding rate</i> <br />
                                 <br />
