Travel info revised

--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 <p>
                                 There are 2 hotel options for your choosing. 
                                 <br />
-                                The Embassy Suites Brea was selected for its great location. Walking distance to many great restaurants, shops, etc.
+                                The Embassy Suites Brea was selected for its great location. Walking distance to many fun restaurants, shops, salons, etc.
                                 <br /> 
-                                The Hotel Fullerton was selected its pre-scheduled shuttle that runs to Disneyland and Downtown Fullerton (where the wedding and reception will be held). <br /> 
+                                The Hotel Fullerton was selected for its shuttle service that runs to Disneyland and Downtown Fullerton. <br /> 
                                 You cannot go wrong!
                                 </p>
                              <div class="column left">
                                <p>
-                                Embassy Suites - Hilton Brea<br />
+                                <u>Embassy Suites - Hilton Brea</u><br />
                                 900 East Birch Street <br />
                                 Brea, CA 92821 <br />
                                 <a href="tel:17149906000">(714) 990-6000</a> <br />
@@ -220,7 +220,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                
                                <div class="column right">
                                    <p>
-                                The Hotel Fullerton<br />
+                                <u>The Hotel Fullerton</u><br />
                                 1500 South Raymond Avenue<br />
                                 Fullerton, CA 92831 <br />
                                 <a href="tel:17146359000">(714) 635-9000</a> <br />
@@ -234,7 +234,10 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Calling in reservation?<br />
                                 Request room rate mentioning: <br /> <i>Spiering &amp; Simmelink Wedding rate</i> <br />
                                 <br />
-                                Email Reservations? <a href="mailto:groupsales@hfullerton.com">Click Here</a>
+                                Email Reservations?
+                                <br />
+                                Download the form (<a href="Reservation-Request.docx">Here</a>) and email request to:  
+                                  <a href="mailto:groupsales@hfullerton.com" target="_blank">groupsales@hfullerton.com</a>
                                 <br />
                                 <br />
                                 <i>Pre-scheduled shuttle runs to Disneyland and Downtown Fullerton.</i> <br />
@@ -269,12 +272,10 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 
                             <h2>VICINITY MAP</h2>
 
-<!--
                             <div class="column full">
-                                <p>This map below is an aid for your travels. The ceremony, reception, and hotel locations are specifically highlighted with yellow pins. 4 airports are tagged to help give options and flexibilty. </p>
+                                <p>Airports, hotels, places to visit and related wedding locations are marked. Check it out!</p>
                                 <br />
                             </div>
--->
                           
                            <div id="gmap">
                                <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=1lgIHN9Sq_W0yz-RBvJT97B4Rgiw" width="640" height="480"></iframe>
