--- a/index.html
+++ b/index.html
@@ -219,7 +219,15 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
                                 <i>Hotel provides shuttle transportation (upon rquest) with in a 5 mile radius.</i> <br />
-<!--                                Shuttle will be available from reception venue back to hotel until 12:30 AM. Scheduled shuttle service is as follows: <br />-->
+                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br /> Scheduled shuttle service is as follows: <br />
+                                   <b>Depart</b> Hotel for Ceremony: <br />
+                                   11:00 AM <br />
+                                   11:20 AM <br />
+                                   11:40 AM <br />
+                                   <br />
+                                   <b>Pick-Up</b> from cereomony to hotel:<br />
+                                   1:20 PM <br />
+                                   1:40 PM <br/>
                             </p>
                                </div>
                                
