--- a/index.html
+++ b/index.html
@@ -218,16 +218,8 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
                                 Calling in reservation?<br />
                                 Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
-                                <i>Hotel provides shuttle transportation (upon rquest) with in a 5 mile radius.</i> <br />
-                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br /> Scheduled shuttle service is as follows: <br />
-                                   <b>Depart</b> Hotel for Ceremony: <br />
-                                   11:00 AM <br />
-                                   11:20 AM <br />
-                                   11:40 AM <br />
-                                   <br />
-                                   <b>Pick-Up</b> from cereomony to hotel:<br />
-                                   1:20 PM <br />
-                                   1:40 PM <br/>
+                                <i>Hotel provides shuttle transportation (upon rquest) with in a 5 mile radius.</i> <br /><br />
+                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br />___<br /><i> Download the shuttle schedule <a href="ES_ShuttleSchedule1014117.docx" target="_blank">here.</a></i>
                             </p>
                                </div>
                                
@@ -305,7 +297,7 @@ Saturday, Ocotber 14 at 12pm (<i>reception to follow</i>)<br /><br />
 
                         <div class="column full">
                         
-                            <p>Our honeymoon has been officially booked! We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime in Rome, Italy. 
+                            <p>Our honeymoon is booked! We decided to embrace the Honeymoon Registry site and look forward to the experience of a lifetime in Rome, Italy. 
                             <br />
                             <br />
                             Rome is filled with so much history, culture, architecture, and globally influential art work. After years of study and reading about this wondrous place, it has always struck a desire to one day tour the cosmopolitain city. We truly look forward to experience Italy with all the history and timeless beauty it has to offer (not to mention food!). We are truly blessed to head off and start our marriage by checking off something big on our bucket list!
