Complimentary Valet Parking

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                                 
                                 Cocktails, 2nd level Terrace <br />5:00 - 6:00 PM <br /> <br />
                                 Reception<br />6:00 - 11:30 PM <br />
+                                
+                                <br />
+                                <b>Valet parking <u>is</u> complimentary.</b>
                             </p>
 
                         </div>
