--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 Fullerton, California <br /><br />
                                 
                                 Cocktails, 2nd level Terrace <br />5:00 - 6:00 PM <br /> <br />
-                                Reception<br />6:00 - 12:00 AM <br />
+                                Reception<br />6:00 PM - 12:00 AM <br />
                                 
                                 <br />
                                 <b>Valet parking <u>is</u> complimentary.</b>
