--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 Calling in reservation?<br />
                                 Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding Group</i> <br />
                                  <br />
-                                <i>Hotel provides shuttle transportation (upon rquest) with in a 5 mile radius.</i> <br /><br />
+                                <i>Hotel provides shuttle transportation (upon request) with in a 5 mile radius.</i> <br /><br />
                                    Shuttle will be available from reception venue back to hotel until 12:30 AM. <br />___<br /><i> Download the set shuttle schedule <a href="ES_ShuttleSchedule1014117.pdf" target="_blank">here.</a></i>
                             </p>
                                </div>
@@ -322,7 +322,7 @@
                             September 13, 2017 <br />
                             </strong></p>
                             <br />
-                            <button type="button" class="center"><a href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank" class="center">RSVP Here!</a></button>
+                            <button type="button" class="center" href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank" class="center">RSVP Here!</button>
                              <br />
                             <h5 class="center">* NOTE * <br>
                                 Buttons do not work on Firefox browser. <br /> Please open in Chrome, Safari or Internet Explorer. </h5>
