Links for Firefox browser

--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
                             September 13, 2017 <br />
                             </strong></p>
                             <br />
-                            <button type="button" class="center" href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank" class="center">RSVP Here!</button>
+                            <button type="button" class="center"><a href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank" class="center">RSVP Here!</a></button>
                              <br />
                             <h5 class="center">* NOTE * <br>
-                                Buttons do not work on Firefox browser. <br /> Please open in Chrome, Safari or Internet Explorer. </h5>
+                                If you are on a FireFox browser, please <a href="https://goo.gl/forms/eN001Jf2bRzqiwVs1" target="_blank">click here to RSVP.</a> <br /> </h5>
 <!--
                            <br />
                              <p class="center">If you have any questions, feel free to
@@ -346,7 +346,7 @@
                             <button type="button" class="center"><a href="https://www.flickr.com/gp/156092539@N03/2J2e82" target="_blank" class="center">View Album</a></button>
                             <br />
                              <h5 class="center">* NOTE * <br />
-                                Buttons do not work on Firefox browser. <br /> Please open in Chrome, Safari or Internet Explorer. </h5>
+                                 If you are on a FireFox browser, please <a href="https://www.flickr.com/gp/156092539@N03/2J2e82" target="_blank">click here to view engagement album.</a> </h5>
                             
                         </div><!--end column-->
                
