Removing Bridal Party From site
Just too much text. Simplfyinh

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         
                           <div class="clearfix"></div>
 
-                        <div class="column full">
+<!--                         <div class="column full">
                             <div class="hr-t"></div>
                             <div class="hr-b"></div>
                         </div>
@@ -160,7 +160,7 @@
                             </div>
 
                         </div><!--end column--> 
-                        <div class="column right bp">
+<!--                         <div class="column right bp">
 
                             <h2>Groomsmen</h2> 
                             <div class="column left">
@@ -177,7 +177,7 @@
                                 Zachery Spiering<br />
                                 Austin Spiering
                                 </p>
-                            </div>
+                            </div> --> 
 
                         </div><!--end column-->    
                                
