Reception End Time

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                                 305 N Harbor Blvd <br />
                                 Fullerton, California <br /><br />
                                 
-                                Cocktails, 2nd level Terrace <br />5:00 - 6:00 PM <br /> <br />
-                                Reception<br />6:00 PM - 12:00 AM <br />
+                                Cocktails, 2nd level Terrace <br /> 5:00 - 6:00 PM <br /> <br />
+                                Reception <br /> 6:00 PM - 11:30 PM <br />
                                 
                                 <br />
-                                <b>Valet parking <u>is</u> complimentary.</b>
+                                <b> Valet parking <u> is </u> complimentary. </b>
                             </p>
 
                         </div>
