Removing Hotel Fullerton Information

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 Fullerton, CA 92831 <br />
                                 <a href="tel:17146359000">(714) 635-9000</a> <br />
                                 <br />
-                                $115 - 2 Full Beds
+<!--                                 $115 - 2 Full Beds
                                 <br />
                                 $115 - 1 King Bed
                                 <br />
@@ -251,7 +251,7 @@
                                 Download the form (<a href="Reservation-Request.docx">Here</a>) and email request to:  
                                   <a href="mailto:groupsales@hfullerton.com" target="_blank">groupsales@hfullerton.com</a>
                                 <br />
-                                <br />
+                                <br /> -->
                                 <i>Pre-scheduled shuttle runs to Disneyland and Downtown Fullerton.</i> <br />
 <!--                                Shuttle will be available from reception until 12:30 AM. Shuttle to ceremony is available upon request. <br />-->
                             </p>
