Removing information regarding ES hotel

--- a/index.html
+++ b/index.html
@@ -212,18 +212,24 @@
                                 900 East Birch Street <br />
                                 Brea, CA 92821 <br />
                                 <a href="tel:17149906000">(714) 990-6000</a> <br />
+<!--
                                 <br />
                                 $159 - 1 King Suite
                                 <br /> $189 - 2 Queen Suite <br /> 
+-->
+<!--
                                  <br />
                                 To ensure room and availbility,<br /> please book prior to:<br /> <strong>September 21, 2017</strong> <br /><br />
                                 Call or book your reservation online. <br />
-                                Online reservations: <a href="http://embassysuites.hilton.com/en/es/groups/personalized/L/LAXBRES-XSS-20171012/index.jhtml" target="_blank">Click Here</a> <br /><br />
+-->
+                                <br />
+                                   Online reservations: <a href="http://embassysuites.hilton.com/en/es/groups/personalized/L/LAXBRES-XSS-20171012/index.jhtml" target="_blank">Click Here</a> <br /> <br />
+<!--
                                 Calling in reservation?<br />
                                 Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding Group</i> <br />
-                                 <br />
+-->
                                 <i>Hotel provides shuttle transportation (upon request) with in a 5 mile radius.</i> <br /><br />
-                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br />___<br /><i> Download the set shuttle schedule <a href="ES_ShuttleSchedule1014117.pdf" target="_blank">here.</a></i>
+<!--                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br />___<br /><i> Download the set shuttle schedule <a href="ES_ShuttleSchedule1014117.pdf" target="_blank">here.</a></i>-->
                             </p>
                                </div>
                                
