Removing all hotel booking information.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <u>Embassy Suites - Hilton Brea</u><br />
                                 900 East Birch Street <br />
                                 Brea, CA 92821 <br />
-                                <a href="tel:17149906000">(714) 990-6000</a> <br />
+                                <a href="tel:17149906000">(714) 990-6000</a> <br /> <br />
 <!--
                                 <br />
                                 $159 - 1 King Suite
@@ -221,15 +221,18 @@
                                  <br />
                                 To ensure room and availbility,<br /> please book prior to:<br /> <strong>September 21, 2017</strong> <br /><br />
                                 Call or book your reservation online. <br />
--->
+
                                 <br />
                                    Online reservations: <a href="http://embassysuites.hilton.com/en/es/groups/personalized/L/LAXBRES-XSS-20171012/index.jhtml" target="_blank">Click Here</a> <br /> <br />
-<!--
+
                                 Calling in reservation?<br />
-                                Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding Group</i> <br />
--->
+                                Please mention you are a guest of the: <br /> <i>Spiering &amp; Simmelink Wedding 
+
                                 <i>Hotel provides shuttle transportation (upon request) with in a 5 mile radius.</i> <br /><br />
-<!--                                   Shuttle will be available from reception venue back to hotel until 12:30 AM. <br />___<br /><i> Download the set shuttle schedule <a href="ES_ShuttleSchedule1014117.pdf" target="_blank">here.</a></i>-->
+Group</i> <br />
+--> 
+                                  Shuttle will be available from reception back to hotel until 12:30 AM.  
+                                  <i> <a href="ES_ShuttleSchedule1014117.pdf" target="_blank">Click here</a> to view the shuttle schedule for our wedding day.</i>
                             </p>
                                </div>
                                
@@ -258,7 +261,7 @@
                                   <a href="mailto:groupsales@hfullerton.com" target="_blank">groupsales@hfullerton.com</a>
                                 <br />
                                 <br /> -->
-                                <i>Pre-scheduled shuttle runs to Disneyland and Downtown Fullerton.</i> <br />
+                                <i>Pre-scheduled shuttle services runs daily to Disneyland and Downtown Fullerton.</i> <br />
 <!--                                Shuttle will be available from reception until 12:30 AM. Shuttle to ceremony is available upon request. <br />-->
                             </p>
                                </div>
